--- a/codigo/pages/instituicoes.html
+++ b/codigo/pages/instituicoes.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="../assets/css/instituicoes.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="/codigo/assets/images/logo1.png"  alt="logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="/codigo/pages/acheiAlgo.html">Achei Algo</a></li>
+            <li><a href="/codigo/pages/itensPerdidos.html">Achados</a></li>
+            <li><a href="./instituicoes.html">Cadastrar Instituição </a></li>
+            <li><a href="/codigo/index.html">Ver Instituição</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
     <main class="principal">
         <form action="achados.html" id="cadastro_insti">
             <input type="text" name="instituicao" placeholder="Nome da Instituição" required id="nome_instituicao" class="instituicao_input">
