--- a/codigo/pages/instituicoes.html
+++ b/codigo/pages/instituicoes.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
             <li><a href="/codigo/pages/acheiAlgo.html">Achei Algo</a></li>
             <li><a href="/codigo/pages/itensPerdidos.html">Achados</a></li>
-            <li><a href="./instituicoes.html">Cadastrar Instituição </a></li>
+            <li><a href="./codigo/pages/instituicoes.html">Cadastrar Instituição </a></li>
             <li><a href="/codigo/index.html">Ver Instituição</a></li>
         </ul>
         <div class="burger">
